# the-nitty-gritty

./: docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.yml
docker/: Dockerfile
mre/src/camera-server/: CMakeLists.txt  deviceManager.cpp
